# whisperX

./: pyproject.toml
