[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.3.3"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.1.1",
    "numpy>=2.0.2",
    "pyannote-audio>=3.3.2",
    "torch",
    "nltk",
    "torchaudio",
    "transformers",
]


[project.scripts]
whisperx = "whisperx.transcribe:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]
